--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dtest=!seleniumTest -Dtest=!actorSearchStepDef -Dtest=!filmSearchStepDef -Dtest=!addActorPageStepDef -Dtest=!deleteActorPageStepDef -Dtest=!updateActorPageStepDef -Dtest=!navigatingPageStepDef -Dsonar.projectKey=YashP77_MyFirstMicroservice
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dtest=!seleniumTest -Dsonar.projectKey=YashP77_MyFirstMicroservice
